tests/errors/frontend/undefined_variable.fpcore
(FPCore (x)
 (let ([pi 3.14159]
       [y (sin (* pi x))])
   y))
